Fix allDayPanel visibility on week view

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -2177,6 +2177,7 @@
             min-height: 100px;
             border-right: @SCHEDULER_BASE_BORDER;
             border-top: @SCHEDULER_BASE_BORDER;
+            border-collapse: collapse;
         }
     
         .dx-scheduler-group-header {
@@ -2185,14 +2186,17 @@
             border-bottom: @SCHEDULER_BASE_BORDER;
         }
         
-        .dx-scheduler-all-day-title {
-            top: 0;
-            position: relative;
-            height: 50px !important;
-            border-bottom: @SCHEDULER_BASE_BORDER;
-            border-right: @SCHEDULER_BASE_BORDER;
+        &.dx-scheduler-work-space-day,
+        &.dx-scheduler-work-space-week,
+        &.dx-scheduler-work-space-work-week {
+            .dx-scheduler-all-day-title {
+                top: 0;
+                position: relative;
+                height: 50px !important;
+                border-bottom: @SCHEDULER_BASE_BORDER;
+                border-right: @SCHEDULER_BASE_BORDER;
+            }
         }
-
         &.dx-scheduler-work-space-day {
             .dx-scheduler-all-day-table-cell {
                 border-top: @SCHEDULER_BASE_BORDER;
